# cleanobs

./: pyproject.toml
cleanobs/: __init__.py  _data.py  _detide.py  _models.py  _plots.py  _settings.py  _stats.py
data/trans/: ioc-abas-rad.json  ioc-abur-rad.json  ioc-chij-rad.json  ioc-fuka-rad.json  ioc-hako-rad.json  ioc-hana-rad.json  ioc-hmda-rad.json  ioc-ishig-rad.json  ioc-kush-rad.json  ioc-kusm-rad.json  ioc-mera-rad.json  ioc-mins-prs.json  ioc-naga-rad.json  ioc-waka-rad.json
requirements/: requirements-dev.txt  requirements.txt
tests/: data_test.py  models_test.py  settings_test.py  test_data.py  test_models.py  test_settings.py
tests/data/era5/: ioc-waka.parquet
tests/data/raw/: ioc-waka-rad.parquet  provider-provider_id-sensor.parquet
